# TimeTrackerRust

./: Cargo.toml  readme.md
src/: active_window.rs  idle_time.rs  main.rs
