[package]
name = "time_tracker"
version = "0.1.0"
authors = ["Lachlan Arthur <lachlanarthur@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "2.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.15"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "psapi", "processthreadsapi", "handleapi"] }
